--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <h1>Video Title</h1>
-    <div id="player-container"></div>
+    <iframe width="560" height="315" frameborder="0" allow="encrypted-media; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
